--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard - SIGEBO</title>
+
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" href="/frontend/assets/img/favicon.png">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
