--- a/frontend/pages/Cuadrante/vistaCuadranteAnual.html
+++ b/frontend/pages/Cuadrante/vistaCuadranteAnual.html
@@ -48,12 +48,14 @@
             </div>
 
             <p>[Migas de pan]</p>
+            <div class="leyenda-box">Leyenda</div>
+            <br>
             <div class="container-fluid calendar-main">
 
                 <div id="year_elems_placeholder" class="d-flex justify-content-center align-items-center gap-2 mb-3">
                 </div>
 
-                <!-- CALENDAR -->
+                <!-- CALENDARIO -->
                 <div class="container-fluid">
                     <div id="calendar" class="row g-4"></div>
                 </div>
@@ -63,7 +65,7 @@
             <div class="justify-content-center cuadrante-bottom mt-4">
 
                 <div class="d-flex justify-content-between align-items-start mb-3">
-                    <div class="leyenda-box">Leyenda</div>
+                    
                     <button class="btn btn-outline-secondary btn-sm">Horas asignadas</button>
                 </div>
 
