--- a/frontend/pages/Guardia/vistaGuardia.html
+++ b/frontend/pages/Guardia/vistaGuardia.html
@@ -13,15 +13,15 @@
     <link rel="stylesheet" href="../../assets/css/plantilla_css.css">
 
     <!-- Configuración (basePath) -->
-    <script src="../../assets/javascript/config.js"></script>
+    <script src="/frontend/config/config.js"></script>
 
     <!-- Script Filtro de la tabla -->
-    <script src="../../assets/javascript/script_filtro_tabla.js"></script>
+    <script src="/frontend/javascript/script_filtro_tabla.js"></script>
 
     <!-- Header / Footer / Sidebar -->
-    <script src="../../assets/javascript/header_footer.js"></script>
+    <script src="/frontend/javascript/header_footer.js" defer></script>
 
- <!-- FullCalendar -->
+    <!-- FullCalendar -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@latest/main.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@latest/index.global.min.js"></script>
 
