--- a/frontend/pages/Mapa/vistaMapa.html
+++ b/frontend/pages/Mapa/vistaMapa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Tipos de emergencia</title>
@@ -8,23 +9,47 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
-    <!-- Paleta de colores -->
-    <link rel="stylesheet" href="../../assets/css/paleta_colores.css">
+    <!-- Paleta de colores / CSS proyecto -->
+    <link rel="stylesheet" href="../../assets/css/header_footer.css">
+    <link rel="stylesheet" href="../../assets/css/plantilla_css.css">
 
-    <!-- Archivo de configuración JS -->
-    <script src="../../assets/javascript/config.js" defer></script>
-
-    <!-- Cabecera y pie de página -->
-    <script src="../../assets/javascript/header_footer.js" defer></script>
+    <!-- Configuración -->
+    <script src="/frontend/config/config.js"></script>
+    <script src="/frontend/javascript/header_footer.js" defer></script>
 
     <!-- Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+    <link rel="stylesheet" href="mapa.css">
+       
+   
 </head>
 
-    <body class="bg-white text-dark">
-        <main>
-            <div id="map" style="height: 500px; width: 100%;"></div>
+<body class="bg-white text-dark">
+
+    <!-- HEADER -->
+    <div id="header-placeholder"></div>
+
+    <!-- LAYOUT CON SIDEBAR -->
+    <div class="d-flex flex-grow-1">
+
+        <!-- SIDEBAR -->
+        <div id="sidebar-placeholder" class="sidebar-bg"></div>
+
+        <!-- MAIN CONTENT -->
+        <main class="p-3 w-100">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h1 class="mb-0">Mapa de Emergencias</h1>
+            </div>
+            <div>
+                <p>[Migas de pan]</p>
+            </div>
+
+            <!-- Map container -->
+            <div id="map-container">
+                <div id="map"></div>
+            </div>
 
             <script>
                 // Inicializar mapa
@@ -35,7 +60,7 @@
                 }).addTo(map);
 
                 // Función para añadir incidencias
-                function agregarIncidencia(lat, lon, nombre, descripcion,funcionario) {
+                function agregarIncidencia(lat, lon, nombre, descripcion, funcionario = "N/A") {
                     L.marker([lat, lon])
                         .addTo(map)
                         .bindPopup(`<b>${nombre}</b><br>${descripcion}<br>Funcionario: ${funcionario}`);
@@ -45,8 +70,8 @@
                 agregarIncidencia(40.417, -3.703, "Incendio en vivienda", "Fuego en un tercer piso, 2 unidades enviadas");
                 agregarIncidencia(40.410, -3.700, "Falsa alarma", "Descripción de ejemplo");
 
-                // Evento: click para crear incidencia
-                map.on('click', function(e) {
+                // Click para agregar incidencia
+                map.on('click', function (e) {
                     let lat = e.latlng.lat;
                     let lon = e.latlng.lng;
 
@@ -59,9 +84,12 @@
                 });
             </script>
         </main>
-        <footer>
-            <!-- Contenedor para footer -->
-            <div id="footer-placeholder"></div>
-        </footer>
-    </body>
+    </div>
+    
+
+    <!-- FOOTER -->
+    <div id="footer-placeholder"></div>
+
+</body>
+
 </html>
