--- a/frontend/pages/Persona/vistaPersona.html
+++ b/frontend/pages/Persona/vistaPersona.html
@@ -13,13 +13,12 @@
     <link rel="stylesheet" href="../../assets/css/plantilla_css.css">
 
     <!-- Configuración (basePath) -->
-    <script src="../../assets/javascript/config.js"></script>
+    <script src="/frontend/config/config.js"></script>
 
-    <!-- Script Filtro de la tabla -->
-    <script src="../../assets/javascript/script_filtro_tabla.js"></script>
+    <!-- JS dependientes -->
+    <script src="/frontend/javascript/header_footer.js" defer></script>
+    <script src="/frontend/javascript/script_filtro_tabla.js" defer></script>
 
-    <!-- Header / Footer / Sidebar -->
-    <script src="../../assets/javascript/header_footer.js"></script>
 
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
