--- a/frontend/pages/Emergencia/vistaEmergenciasActivas.html
+++ b/frontend/pages/Emergencia/vistaEmergenciasActivas.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tipos de emergencia</title>
 
     <!-- Bootstrap CSS -->
@@ -33,152 +34,156 @@
     <div id="header-placeholder"></div>
 
     <!-- LAYOUT CON SIDEBAR -->
-    <div class="d-flex flex-grow-1">
-        <div id="sidebar-placeholder"></div>
-        <main class="p-3 w-100">
+    <div class="container-fluid">
+        <div class="row">
+            <!-- SIDEBAR -->
+            <div id="sidebar-placeholder" class="col-auto p-0"></div>
 
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="mb-0">Emergencias activas</h1>
-                <span class="badge bg-danger fs-6">EN TIEMPO REAL</span>
-            </div>
+            <!-- CONTENIDO PRINCIPAL -->
+            <main class="col p-3 p-md-4 main-container">
 
-            <div class="container-fluid">
-
-                <!-- EMERGENCIA 1 -->
-                <div class="card mb-4 shadow border-danger">
-                    <div class="card-body">
-                        <div class="row">
-
-                            <!-- MAPA -->
-                            <div class="col-md-5 mb-3 mb-md-0">
-                                <div class="ratio ratio-16x9 border rounded">
-                                    <!-- Sustituir por mapa real (Leaflet / Google Maps) -->
-                                    <iframe 
-                                        src="https://maps.google.com/maps?q=40.4168,-3.7038&z=15&output=embed"
-                                        loading="lazy">
-                                    </iframe>
-                                </div>
-                            </div>
-
-                            <!-- INFO -->
-                            <div class="col-md-7">
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <h4 class="text-danger">
-                                        Incendio urbano
-                                    </h4>
-                                    <span class="badge bg-danger">
-                                        ACTIVA
-                                    </span>
-                                </div>
-
-                                <p class="mb-1">
-                                    <strong>ID Emergencia:</strong> EMG-2024-001
-                                </p>
-
-                                <p class="mb-1">
-                                    <strong>Dirección:</strong> Calle Mayor 25, Madrid
-                                </p>
-
-                                <p class="mb-1">
-                                    <strong>Hora activación:</strong> 12:34
-                                </p>
-
-                                <p class="mb-3">
-                                    <strong>Equipos:</strong> Equipo 1
-                                </p>
-
-                                <p class="mb-3">
-                                    <strong>Vehículos:</strong> BUP-1, Ambulancia
-                                </p>
-
-                                <!-- ACCIONES -->
-                                <div class="d-flex gap-2">        <!-- TODOS ESTOS DATOS SE RELLENARÁN CON JS -->             
-                                    <button                      
-                                        class="btn btn-outline-primary btn-sm btn-ver-emergencia"
-                                        data-id="EMG-2024-001"                 
-                                        data-tipo="Incendio urbano"
-                                        data-direccion="Calle Mayor 25, Madrid"
-                                        data-hora="12:34"
-                                        data-equipos="Equipo 1"
-                                        data-vehiculos="BUP-1, Ambulancia">
-                                        <i class="bi bi-eye"></i> Ver detalle
-                                    </button>
-                                    <button 
-                                        class="btn btn-outline-danger btn-sm btn-cerrar-emergencia"
-                                        data-id="EMG-2024-001">
-                                        <i class="bi bi-check-circle"></i> Cerrar emergencia
-                                    </button>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h1 class="mb-0">Emergencias activas</h1>
+                    <span class="badge bg-danger fs-6">EN TIEMPO REAL</span>
                 </div>
 
-                <!-- EMERGENCIA 2 -->
-                <div class="card mb-4 shadow border-danger">
-                    <div class="card-body">
-                        <div class="row">
+                <div class="container-fluid">
 
-                            <!-- MAPA -->
-                            <div class="col-md-5 mb-3 mb-md-0">
-                                <div class="ratio ratio-16x9 border rounded">
-                                    <iframe 
-                                        src="https://maps.google.com/maps?q=40.4300,-3.7000&z=15&output=embed"
-                                        loading="lazy">
-                                    </iframe>
+                    <!-- EMERGENCIA 1 -->
+                    <div class="card mb-4 shadow border-danger">
+                        <div class="card-body">
+                            <div class="row">
+
+                                <!-- MAPA -->
+                                <div class="col-md-5 mb-3 mb-md-0">
+                                    <div class="ratio ratio-16x9 border rounded">
+                                        <!-- Sustituir por mapa real (Leaflet / Google Maps) -->
+                                        <iframe 
+                                            src="https://maps.google.com/maps?q=40.4168,-3.7038&z=15&output=embed"
+                                            loading="lazy">
+                                        </iframe>
+                                    </div>
                                 </div>
+
+                                <!-- INFO -->
+                                <div class="col-md-7">
+                                    <div class="d-flex justify-content-between align-items-start">
+                                        <h4 class="text-danger">
+                                            Incendio urbano
+                                        </h4>
+                                        <span class="badge bg-danger">
+                                            ACTIVA
+                                        </span>
+                                    </div>
+
+                                    <p class="mb-1">
+                                        <strong>ID Emergencia:</strong> EMG-2024-001
+                                    </p>
+
+                                    <p class="mb-1">
+                                        <strong>Dirección:</strong> Calle Mayor 25, Madrid
+                                    </p>
+
+                                    <p class="mb-1">
+                                        <strong>Hora activación:</strong> 12:34
+                                    </p>
+
+                                    <p class="mb-3">
+                                        <strong>Equipos:</strong> Equipo 1
+                                    </p>
+
+                                    <p class="mb-3">
+                                        <strong>Vehículos:</strong> BUP-1, Ambulancia
+                                    </p>
+
+                                    <!-- ACCIONES -->
+                                    <div class="d-flex gap-2">        <!-- TODOS ESTOS DATOS SE RELLENARÁN CON JS -->             
+                                        <button                      
+                                            class="btn btn-outline-primary btn-sm btn-ver-emergencia"
+                                            data-id="EMG-2024-001"                 
+                                            data-tipo="Incendio urbano"
+                                            data-direccion="Calle Mayor 25, Madrid"
+                                            data-hora="12:34"
+                                            data-equipos="Equipo 1"
+                                            data-vehiculos="BUP-1, Ambulancia">
+                                            <i class="bi bi-eye"></i> Ver detalle
+                                        </button>
+                                        <button 
+                                            class="btn btn-outline-danger btn-sm btn-cerrar-emergencia"
+                                            data-id="EMG-2024-001">
+                                            <i class="bi bi-check-circle"></i> Cerrar emergencia
+                                        </button>
+                                    </div>
+                                </div>
+
                             </div>
-
-                            <!-- INFO -->
-                            <div class="col-md-7">
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <h4 class="text-danger">
-                                        Accidente de tráfico
-                                    </h4>
-                                    <span class="badge bg-danger">
-                                        ACTIVA
-                                    </span>
-                                </div>
-
-                                <p class="mb-1">
-                                    <strong>ID Emergencia:</strong> EMG-2024-002
-                                </p>
-
-                                <p class="mb-1">
-                                    <strong>Dirección:</strong> M-30, km 12
-                                </p>
-
-                                <p class="mb-1">
-                                    <strong>Hora activación:</strong> 13:05
-                                </p>
-
-                                 <p class="mb-3">
-                                    <strong>Equipos:</strong> Equipo 2
-                                </p>
-
-                                <p class="mb-3">
-                                    <strong>Vehículos:</strong> BUP-2, Ambulancia
-                                </p>
-
-                                <!-- ACCIONES -->
-                                <div class="d-flex gap-2">
-                                    <button class="btn btn-outline-primary btn-sm">
-                                        <i class="bi bi-eye"></i> Ver detalle
-                                    </button>
-                                    <button class="btn btn-outline-danger btn-sm">
-                                        <i class="bi bi-check-circle"></i> Cerrar emergencia
-                                    </button>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
+
+                    <!-- EMERGENCIA 2 -->
+                    <div class="card mb-4 shadow border-danger">
+                        <div class="card-body">
+                            <div class="row">
+
+                                <!-- MAPA -->
+                                <div class="col-md-5 mb-3 mb-md-0">
+                                    <div class="ratio ratio-16x9 border rounded">
+                                        <iframe 
+                                            src="https://maps.google.com/maps?q=40.4300,-3.7000&z=15&output=embed"
+                                            loading="lazy">
+                                        </iframe>
+                                    </div>
+                                </div>
+
+                                <!-- INFO -->
+                                <div class="col-md-7">
+                                    <div class="d-flex justify-content-between align-items-start">
+                                        <h4 class="text-danger">
+                                            Accidente de tráfico
+                                        </h4>
+                                        <span class="badge bg-danger">
+                                            ACTIVA
+                                        </span>
+                                    </div>
+
+                                    <p class="mb-1">
+                                        <strong>ID Emergencia:</strong> EMG-2024-002
+                                    </p>
+
+                                    <p class="mb-1">
+                                        <strong>Dirección:</strong> M-30, km 12
+                                    </p>
+
+                                    <p class="mb-1">
+                                        <strong>Hora activación:</strong> 13:05
+                                    </p>
+
+                                    <p class="mb-3">
+                                        <strong>Equipos:</strong> Equipo 2
+                                    </p>
+
+                                    <p class="mb-3">
+                                        <strong>Vehículos:</strong> BUP-2, Ambulancia
+                                    </p>
+
+                                    <!-- ACCIONES -->
+                                    <div class="d-flex gap-2">
+                                        <button class="btn btn-outline-primary btn-sm">
+                                            <i class="bi bi-eye"></i> Ver detalle
+                                        </button>
+                                        <button class="btn btn-outline-danger btn-sm">
+                                            <i class="bi bi-check-circle"></i> Cerrar emergencia
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-
-            </div>
-
-        </main>
+            </main>
+        </div>
     </div>
     <!-- FOOTER -->
     <div id="footer-placeholder"></div>
